--- a/cs/chatButton.css
+++ b/cs/chatButton.css
@@ -10,14 +10,14 @@ button{
     cursor: pointer;
 }
 
-/* body{
+body{
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #e5e5e5;
+    /* background-color: #9a3131;
     display: flex;
     justify-content: center;
     height: 100vh;
-    width: 100%;
-} */
+    width: 100%; */
+}
 
 /* section{
     max-width: 1100px;
@@ -25,17 +25,6 @@ button{
     text-align: center;
     padding: 0 1rem;
 } */
-/* h1{
-    font-size: 3rem;
-    margin-bottom: 2rem;
-}
-
-
-p{
-    font-size: 2rem;
-}
- */
-
 .chat-btn{
     position: fixed;
     right:50px;
@@ -101,11 +90,11 @@ p{
     box-shadow: 0 2px 5px rgba(0,0,0,0.4);
 }
 
-.badge{
+/* .badge{
     position: absolute;
     width: 30px;
     height: 30px;
-    background-color: black;
+    background-color: red;
     color:white;
     border-radius: 50%;
     display: flex;
@@ -113,7 +102,8 @@ p{
     align-items: center;
     top:-10px;
     right: -10px;
-}
+} */
+
 
 .input-area{
     position: relative;
